@@ -12,6 +12,7 @@ tungsten-ore=[item=tungsten-ore] Wolframite
 
 [item-name]
 tungsten-ore=Wolframite
+tungsten-powder=Tungsten powder
 tungsten-dust=Tungsten dust
 tungsten-plate=Tungsten plate
 tungsten-ingot=Tungsten ingot
@@ -63,6 +64,7 @@ bztungsten-mining-fluid-amount=Mining fluid amount
 bztungsten-mining-fluid-amount-k2=Mining fluid amount for Krastorio2
 bztungsten-starting-patch=Starting wolframite patch
 bztungsten-more-intermediates=Enable more intermediates
+bztungsten-se-sintering=SE: Sinter powdered tungsten instead of casting
 
 [mod-setting-description]
 bztungsten-recipe-bypass=Skip modifying these recipes (comma-separated list).
@@ -71,6 +73,7 @@ bztungsten-advanced-carbon-furnace=A furnace to smelt tungsten carbide quickly. 
 bztungsten-mining-fluid-amount=Amount of fluid (water) needed to mine, default 10. Note, this is displayed as 1/10th the value in some parts of the game.
 bztungsten-mining-fluid-amount-k2=Mining fluid amount for Krastorio2, default 1. Note, this is displayed as 1/10th the value in some parts of the game.
 bztungsten-starting-patch=Whether a new game should have a starting wolframite patch. Disabled by default in vanilla, AAI, etc. 
+bztungsten-se-sintering=Due to the high melting point of tungsten, instead of creating molten tungsten and casting it, create tungsten powder and sinter it (still in a casting machine).
 
 [string-mod-setting]
 bztungsten-more-intermediates-no=No
